--- a/src/components/ui/toggle/styles.module.scss
+++ b/src/components/ui/toggle/styles.module.scss
@@ -17,7 +17,7 @@
     background: var(--colors-gray-transparent-100);
 
     svg {
-      color: var(--colors-brown);
+      color: var(--colors-gray-100);
     }
   }
 }
