--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,9 +6,15 @@
 
 :root {
   --colors-gray-transparent-100: rgba(204, 204, 204, 0.2);
-  --colors-gray-transparent-200: rgba(165, 165, 165, 0.6);
-  --colors-gray-transparent-300: rgba(58, 58, 58, 0.4);
+  --colors-gray-transparent-200: rgba(46, 50, 48, 0.64);
+
   --colors-brown: #805231;
+  --colors-red: #f96e67;
+
+  --colors-gray-100: rgb(202, 202, 202);
+  --colors-gray-200: rgb(129, 129, 129);
+  --colors-gray-300: rgb(35, 37, 36);
+
   --colors-black: #000000;
   --colors-white: #ffffff;
 
