--- a/src/components/ui/dropdown-menu/styles.module.scss
+++ b/src/components/ui/dropdown-menu/styles.module.scss
@@ -5,6 +5,7 @@
   border-radius: var(--radii-sm);
   animation-duration: 0.6s;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  z-index: var(--z-index-overlay);
 
   &[data-state="open"] {
     animation-name: slideUp;
